--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.2.0",
   "private": true,
   "homepage": ".",
+  "engines": {
+    "node": ">=16.16.0 <20.13.1"
+  },
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@fortawesome/fontawesome-free": "^6.2.0",
