--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@hookform/resolvers": "2.9.10",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@popperjs/core": "2.11.8",
     "@svgr/webpack": "^5.5.0",
     "apisauce": "^2.1.1",
     "axios": "^0.21.4",
@@ -40,7 +41,7 @@
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "5.3.7",
     "browserslist": "^4.18.1",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
